tests/errors/finally_no_error.py
# expect: try
# expect: finally
# expect: after
try:
    print("try")
finally:
    print("finally")
print("after")
